# TopometricRegistration

./: .gitignore  README.md  pointnet.py  requirements.txt  train_segmentation.py
ceresCode/: CMakeLists.txt  angle_local_parameterization.hpp  costFunctions.hpp  normalize_angle.hpp  problemStructs.hpp  topometricRegistration.cc
ceresCode/data/: constraints.txt  csv2txt.py  osm_nodes.txt  osm_nodes_noisy.txt  output.txt  perturbOSM.py  road.txt  visualizeResults.py
devensData/: arguments.py  createCeresData.py  main.py  main2.py  main_notebook.ipynb  opti_node.py
devensData/devens_map/: Readme.md  devens_map_poly.pkl  draw_devens_map.py
devensData/devens_osm/: Readme.md  draw_graph_from_files.py  osm_edges.txt  osm_edges_truth.txt  osm_nodes.txt  osm_nodes_truth.txt
devensData/pointclouds/: Readme.md  load_pointclouds.py
notebooks/: Untitled.ipynb  devens_test.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  devens_test-checkpoint.ipynb
scripts/: demo_scratchy.py
syntheticData/: osm.txt  osm_connectivity.csv  osm_nodes.csv  road.csv  synthesize.py  synthesizeData.py
